--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -4,7 +4,7 @@
 Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, Inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) were filtered using a prefilled column to remove the Inhibitor.  2,2 azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) was used as initiator as received. Polystyrene (Sigma Aldrich, MW XXX) was used as received. As solvents, Methanol, Toluene and Chloroform were used.
 \subsection{Nanoparticles in Polystyrene Matrix}
 The nanoparticles were precipitated with MeOH, centrifuged and redispersed in Chloroform at a concentration of 25\,mg/ml, whereas the weight of nanoparticles includes the weight of the oleic acid capping. Polystyrene was dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution were added (to account for the different iron contents) to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of XXX\,ul the solution were dropped onto glass slides and dried. After drying, the films were carefully removed from the glass slides.
-As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissolved in 6ml acetone, sonicated and  fractions of XXX were dropped onto glass slides and carefully removed after drying.
+As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissolved in 6ml acetone, sonicated and  fractions of XXX were dropped onto slowly spinning glass slides (XXX rpm for XX 5\,min) and carefully removed after drying.
 \begin{table}
 	\centering
 	\caption{Nanoparticles in Polystyrene recipes}
