--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -1,5 +1,11 @@
 \chapter{Theory}
 
+\cite{goodman2000,goodman2007,agarwal2013,classen2017,goodman2000,cowley1995,born1980,trigg2005,attwood1999,griffiths2005,goodman2007,agarwal2013,classen2017,loudon2000,mandel1995,hanburry1956,galuber2006,baym1997,zernike1938,rosen96,yabashi2002,singer2013,santra2009,krause1979,trost2020,inoue2019,sorum1987,lajunen04,mpccd,tono2013}
+
+random process
+ergodic: time average equals expectation value
+stationary: shifting all time instants by $\tau$ does not change the statistical description of the random process 
+
 \section{Coherence}
 Spherical waves as  solutions to wave equation
 \begin{equation}
@@ -134,6 +140,33 @@ Hanburry Brown and Twiss
 
 \section{Intensity Correlations using X-Ray Fluorescence}
 \section{Signal to Noise Considerations}
+The speckle contrast is governt by the number of independent modes overlaid in the measurement.
+
+Number of temporal degrees of freedom
+\begin{equation}
+M_t=\frac{\left(\int_{-\infty}^{\infty} P(t)\diff t\right)^2}{\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t}
+\end{equation}
+with $P(t)$ the integration window weighting function and $K(t)$ its autocorrelation. If the integration windows is set by the integration time $T$ of the detector, $P(t)$ is a rectangular function with the width $T$ and
+\begin{equation}
+M_t,rect = \frac{T}{2} \left[\int_{0}^{T} \left( 1-\frac{t}{T}\right) \left|\mu(t)\right|^2 \diff t \right]^{-1} .
+\end{equation}
+If $P(t)$ is the Gaussian excitation pulse with FWHM of $\tau$ and unit area,
+\begin{align}
+P(t)&=\frac{2\sqrt{\ln 2}}{\sqrt{\pi} \tau} e^{-\left(2\sqrt{\ln 2}\frac{t}{\tau}\right)^2}\\
+K(t)&= \sqrt{\frac{2{\ln 2}}{\pi}}\frac{1}{ \tau} e^{-\left(\sqrt{2\ln 2}\frac{t}{\tau}\right)^2}
+\end{align}
+and the spectrum is Lorentzian fluorescence, the number of degrees of freedom is
+\begin{align}
+M_t,gauss&=\left[\int_{-\infty}^{\infty} K(t) \left|\mu(t)\right|^2\diff t\right]^{-1}\\
+=42
+\end{align}
+
+The experimentally indistinguishable fluorescence energies $K_alpha,1$ and $K_alpha,2$ (as well as  $K_beta$ if no filter is used for suppression) give additional independent modes $M_E$
+
+As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized, there are 2 independent polarization modes giving $M_P = 2$  
+
+
+As good approximation, the total number of modes can be considered the product of those modes numbers (in reality, the mode numbers are not completely independent as)
 %- SNR
 %will use Peak/stdev bg definition
 Which factors influence SNR
