--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -23,10 +23,10 @@
 
 @PhdThesis{thibault2007,
   author = {{Thibault}, P.},
-  title  = {{Algorithmic methods in diffraction microscopy}},
   school = {Cornell University},
+  title  = {{Algorithmic methods in diffraction microscopy}},
   year   = {2007},
-  file   = {thibault2007.pdf:thibault2007.pdf:PDF},
+  file   = {thibault2007.pdf:thibault2007.pdf:PDF;:http\://users.ph.tum.de/gu74hih/thesis_LR.pdf:},
 }
 
 @Article{marchesini2007,
@@ -67,13 +67,12 @@
   publisher = {OSA},
 }
 
-@Book{goodman2005,
-  title     = {Introduction to Fourier optics},
-  publisher = {Roberts and Company Publishers},
-  year      = {2005},
+@Book{goodman2000,
   author    = {Goodman, Joseph W},
-  edition   = {3.},
-  file      = {goodman2005.pdf:goodman2005.pdf:PDF},
+  publisher = {John Wiley \& Sons},
+  title     = {Statistical Optics},
+  year      = {2000},
+  groups    = {msc},
 }
 
 @Book{castleman1996,
@@ -126,12 +125,13 @@
 }
 
 @Book{cowley1995,
-  title     = {Diffraction physics},
-  publisher = {Elsevier},
-  year      = {1995},
   author    = {Cowley, John Maxwell},
+  publisher = {Elsevier},
+  title     = {Diffraction physics},
+  year      = {1995},
   edition   = {3.},
   file      = {cowley1995.pdf:cowley1995.pdf:PDF},
+  groups    = {msc},
 }
 
 @InProceedings{lobaz2013,
@@ -326,31 +326,34 @@
 }
 
 @Book{born1980,
-  title     = {Principles of Optics},
-  publisher = {Pergamon Press},
-  year      = {1980},
   author    = {Born, Max and Wolf, Emil},
+  publisher = {Pergamon Press},
+  title     = {Principles of Optics},
+  year      = {1980},
   edition   = {6},
+  groups    = {msc},
 }
 
 @InCollection{trigg2005,
   author    = {Kazuo Ohtaka},
-  title     = {Green's Functions},
   booktitle = {Mathematical tools for physicists},
   publisher = {John Wiley \& Sons},
+  title     = {Green's Functions},
   year      = {2005},
+  edition   = {1.},
   editor    = {Trigg, George L},
   pages     = {165-168},
-  edition   = {1.},
   file      = {trigg2005.pdf:trigg2005.pdf:PDF},
+  groups    = {msc},
 }
 
 @Book{attwood1999,
-  title     = {Soft x-rays and extreme ultraviolet radiation: principles and applications},
-  publisher = {Cambridge university press},
-  year      = {1999},
   author    = {Attwood, David},
+  publisher = {Cambridge university press},
+  title     = {Soft x-rays and extreme ultraviolet radiation: principles and applications},
+  year      = {1999},
   edition   = {1.},
+  groups    = {msc},
 }
 
 @Article{henke,
@@ -442,14 +445,15 @@
 }
 
 @InBook{griffiths2005,
+  author    = {Griffiths, D.J.},
   chapter   = {11},
   pages     = {408-415},
-  title     = {Introduction to Quantum Mechanics},
   publisher = {Pearson Prentice Hall},
+  title     = {Introduction to Quantum Mechanics},
   year      = {2005},
-  author    = {Griffiths, D.J.},
-  series    = {Pearson international edition},
   edition   = {2.},
+  series    = {Pearson international edition},
+  groups    = {msc},
 }
 
 @Article{he2004,
@@ -530,4 +534,268 @@
   edition   = {3.},
 }
 
+@Book{goodman2005,
+  title     = {Introduction to Fourier optics},
+  publisher = {Roberts and Company Publishers},
+  year      = {2005},
+  author    = {Goodman, Joseph W},
+  edition   = {3.},
+  file      = {goodman2005.pdf:goodman2005.pdf:PDF},
+}
+
+@Book{goodman2007,
+  author    = {Goodman, Joseph W},
+  publisher = {Roberts \& Company},
+  title     = {Speckle Phenomena in Optics: Theory and Applications},
+  year      = {2007},
+  groups    = {msc},
+}
+
+@Book{agarwal2013,
+  author    = {Agarwal, Girish S},
+  publisher = {Cambridge University Press},
+  title     = {Quantum Optics},
+  year      = {2013},
+  isbn      = {9781107006409},
+  series    = {Quantum Optics},
+  groups    = {msc},
+  lccn      = {2012025069},
+}
+
+@Article{classen2017,
+  author   = {Classen, Anton and Ayyer, Kartik and Chapman, Henry N. and R\"ohlsberger, Ralf and von Zanthier, Joachim},
+  journal  = {Phys. Rev. Lett.},
+  title    = {Incoherent Diffractive Imaging via Intensity Correlations of Hard X Rays},
+  year     = {2017},
+  pages    = {053401},
+  volume   = {119},
+  doi      = {10.1103/PhysRevLett.119.053401},
+  groups   = {msc},
+  issue    = {5},
+  numpages = {6},
+}
+
+@Book{loudon2000,
+  author    = {Loudon, Rodney},
+  publisher = {OUP Oxford},
+  title     = {The Quantum Theory of Light},
+  year      = {2000},
+  isbn      = {9780191589782},
+  groups    = {msc},
+}
+
+@Book{mandel1995,
+  author    = {Mandel, Leonard and Wolf, Emil},
+  publisher = {Cambridge University Press},
+  title     = {Optical Coherence and Quantum Optics},
+  year      = {1995},
+  isbn      = {9781139643023},
+  groups    = {msc},
+}
+
+@Article{hanburry1956,
+  author   = {Hanbury Brown, Robert and Twiss, Richard Q.},
+  journal  = {Nature},
+  title    = {Correlation between Photons in two Coherent Beams of Light},
+  year     = {1956},
+  number   = {4497},
+  pages    = {27--29},
+  volume   = {177},
+  abstract = {Classical interferometry works by detecting correlations in the phases of two waves. In Nature in 1956, R. Hanbury-Brown and R. Q. Twiss demonstrated another technique that probes quantum-mechanical correlations in the electromagnetic field. Splitting an incoherent light beam, they found that photon detections in the two daughter beams were correlated: the photons were bunching together. This corresponds to a correlation in the intensity of light in the two beams, which Hanbury-Brown and Twiss suggested could be used to infer the angular size of distant stars. Physicists now rely on the effect to probe the quantum character of complex light sources. {$[$}Obituary of Robert Hanbury Brown: Nature 416, 34 (2002){$]$}},
+  doi      = {10.1038/177027a0},
+  groups   = {msc},
+}
+
+@Article{galuber2006,
+  author  = {Glauber, Roy J.},
+  journal = {Rev. Mod. Phys.},
+  title   = {Nobel Lecture: One hundred years of light quanta},
+  year    = {2006},
+  pages   = {1267--1278},
+  volume  = {78},
+  doi     = {10.1103/RevModPhys.78.1267},
+  groups  = {msc},
+  issue   = {4},
+}
+
+@Article{baym1997,
+  author  = {Baym, Gordon},
+  journal = {Acta Physica Polonica B},
+  title   = {The physics of Hanbury Brown–Twiss intensity interferometry: from stars to nuclear collisions},
+  year    = {1997},
+  pages   = {1839-1884},
+  volume  = {29},
+  groups  = {msc},
+}
+
+@Article{zernike1938,
+  author  = {Zernike, Frits},
+  journal = {Physica D: Nonlinear Phenomena},
+  title   = {The concept of degree of coherence and its application to optical problems},
+  year    = {1938},
+  pages   = {785-795},
+  volume  = {5},
+  groups  = {msc},
+}
+
+@Article{rosen96,
+  author    = {Rosen, Joseph and Yariv, Amnon},
+  journal   = {Opt. Lett.},
+  title     = {Three-dimensional imaging of random radiation sources},
+  year      = {1996},
+  number    = {14},
+  pages     = {1011--1013},
+  volume    = {21},
+  abstract  = {A method to image random three-dimensional source distributions is proposed. We show that, by using a Michelson stellar interferometer in a prescribed fashion, one is able to measure a special form of a three-dimensional degree of coherence. The inverse Fourier transform of this coherence function yields the three-dimensional intensity distribution of the source as seen from the paraxial far zone.},
+  doi       = {10.1364/OL.21.001011},
+  groups    = {msc},
+  keywords  = {Coherence; Fourier transforms; Inverse problems; Michelson interferometers; Spherical lenses; Three dimensional imaging},
+  publisher = {OSA},
+}
+
+@Article{yabashi2002,
+  author    = {Yabashi, M. and Tamasaku, K. and Ishikawa, T.},
+  journal   = {Phys. Rev. Lett.},
+  title     = {Measurement of X-Ray Pulse Widths by Intensity Interferometry},
+  year      = {2002},
+  pages     = {244801},
+  volume    = {88},
+  doi       = {10.1103/PhysRevLett.88.244801},
+  groups    = {msc},
+  issue     = {24},
+  numpages  = {4},
+  publisher = {American Physical Society},
+}
+
+@Article{singer2013,
+  author  = {Singer, Andrej and Lorenz, Ulf and Sorgenfrei, Nomi and Gerasimova, Natalia and Gulden, Johannes and Yefanov, O and Kurta, Ruslan and Shabalin, Anatoly and Dronyak, R and Treusch, R. and Kocharyan, Vitali and Weckert, E and Wurth, W and Vartanyants, I},
+  journal = {Physical review letters},
+  title   = {Hanbury Brown-Twiss Interferometry at a Free-Electron Laser},
+  year    = {2013},
+  month   = {07},
+  pages   = {034802},
+  volume  = {111},
+  doi     = {10.1103/PhysRevLett.111.034802},
+  groups  = {msc},
+}
+
+@Article{santra2009,
+  author    = {R Santra},
+  journal   = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+  title     = {Concepts in X-Ray Physics},
+  year      = {2009},
+  number    = {16},
+  pages     = {169801--169801},
+  volume    = {42},
+  abstract  = {At the top of the right column on page 1, the word `nonperturbative' should be replaced by `nonperturbing'.
+
+The state |F⟩ in equations (67) and (101) is not properly normalized. The corrected equations read as in the accompanying PDF file. The equations derived from equations (67) and (101) are correct in the tutorial.
+
+The Compton scattering cross section in equation (110) is incorrect. It follows from equation (109) in the tutorial that the correct expression is as presented in the accompanying PDF file. I thank Tihomir Surić and Richard Pratt for pointing out the error in equation (110).},
+  doi       = {10.1088/0953-4075/42/16/169801},
+  groups    = {msc},
+  publisher = {{IOP} Publishing},
+}
+
+@Article{krause1979,
+  author  = {Krause, M. O. and Oliver,J . H.},
+  journal = {Journal of Physical and Chemical Reference Data},
+  title   = {Natural widths of atomic K and L levels, {K$\alpha$} X‐ray lines and several KLL Auger lines},
+  year    = {1979},
+  number  = {2},
+  pages   = {329-338},
+  volume  = {8},
+  doi     = {10.1063/1.555595},
+  groups  = {msc},
+}
+
+@Article{trost2020,
+  author    = {Trost, Fabian and Ayyer, Kartik and Chapman, Henry N},
+  journal   = {New Journal of Physics},
+  title     = {Photon statistics and signal to noise ratio for incoherent diffraction imaging},
+  year      = {2020},
+  issn      = {1367-2630},
+  month     = {Aug},
+  number    = {8},
+  pages     = {083070},
+  volume    = {22},
+  doi       = {10.1088/1367-2630/aba85c},
+  groups    = {msc},
+  publisher = {IOP Publishing},
+}
+
+@Article{inoue2019,
+  author   = {Inoue, Ichiro and Tamasaku, Kenji and Osaka, Taito and Inubushi, Yuichi and Yabashi, Makina},
+  journal  = {Journal of Synchrotron Radiation},
+  title    = {{Determination of X-ray pulse duration via intensity correlation measurements of X-ray fluorescence}},
+  year     = {2019},
+  month    = {Nov},
+  number   = {6},
+  pages    = {2050--2054},
+  volume   = {26},
+  abstract = {A simple method using X-ray fluorescence is proposed to diagnose the duration of an X-ray free-electron laser (XFEL) pulse. This work shows that the degree of intensity correlation of the X-ray fluorescence generated by irradiating an XFEL pulse on metal foil reflects the magnitude relation between the XFEL duration and the coherence time of the fluorescence. Through intensity correlation measurements of copper {\it K}{$\alpha$} fluorescence, the duration of 12keV XFEL pulses from SACLA was evaluated to be {$\sim$}10fs.},
+  doi      = {10.1107/S1600577519011202},
+  groups   = {msc},
+  keywords = {X-ray free-electron lasers, intensity correlation, X-ray fluorescence},
+}
+
+@Article{sorum1987,
+  author   = {H Sorum},
+  journal  = {Journal of Physics F: Metal Physics},
+  title    = {The K{$\alpha$1,2} X-ray spectra of the 3d transition metals Cr, Fe, Co, Ni and Cu},
+  year     = {1987},
+  number   = {2},
+  pages    = {417--425},
+  volume   = {17},
+  abstract = {The electron-excited K alpha 1 and K alpha 2 X-ray spectra of the metals Cr, Fe, Co, Ni and Cu have been investigated with the aid of curved-crystal spectrometry, and are compared with respect to asymmetry indices and FWHM values. Three alternative approximations have been applied in the calculations, i.e. one symmetric lorentzian per line, two symmetric lorentzians per line and two skew lorentzians per line. Fractional contributions to the extra non-line intensity from the multiplet structure, the skewness effect and from radiative Auger processes have been evaluated, indicating that the multiplet structure is of major importance for Cr and Fe, while radiative Auger processes are dominant for Ni and Cu. The three effects yield about the same magnitude of extra non-line intensity in the case of Co. The radiative Auger processes give a relative intensity of approximately the same magnitude, i.e. approximately 8% of the main line peak intensity, for all the elements in question and for both the alpha 1 line and the alpha 2 line.},
+  doi      = {10.1088/0305-4608/17/2/011},
+  groups   = {msc},
+}
+
+@Article{lajunen04,
+  author    = {Hanna Lajunen and Jani Tervo and Pasi Vahimaa},
+  journal   = {J. Opt. Soc. Am. A},
+  title     = {Overall coherence and coherent-mode expansion of spectrally partially coherent plane-wave pulses},
+  year      = {2004},
+  month     = {Nov},
+  number    = {11},
+  pages     = {2117--2123},
+  volume    = {21},
+  abstract  = {The modal theory for spectrally partially coherent nonstationary plane waves is introduced. The theory is first developed in the space--frequency domain and then extended to the space--time domain. Propagation properties of the coherent modes are analyzed. The concept of the overall degree of coherence is extended to the domain of nonstationary fields, and it is shown that the overall degree of coherence of partially coherent plane-wave pulses is the same in the space--frequency and space--time domains. The theory is applied to the recently introduced concept of spectrally Gaussian Schell-model plane-wave pulses.},
+  doi       = {10.1364/JOSAA.21.002117},
+  groups    = {msc},
+  keywords  = {Coherence; Statistical optics; Pulses; Coherence; Coherence theory; Fourier transforms; Light fields; Light properties; Spectral properties},
+  publisher = {OSA},
+}
+
+@Article{mpccd,
+  author  = {Kameshima,Takashi and Ono,Shun and Kudo,Togo and Ozaki,Kyosuke and Kirihara,Yoichi and Kobayashi,Kazuo and Inubushi,Yuichi and Yabashi,Makina and Horigome,Toshio and Holland,Andrew and Holland,Karen and Burt,David and Murao,Hajime and Hatsui,Takaki},
+  journal = {Review of Scientific Instruments},
+  title   = {Development of an X-ray pixel detector with multi-port charge-coupled device for X-ray free-electron laser experiments},
+  year    = {2014},
+  number  = {3},
+  pages   = {033110},
+  volume  = {85},
+  doi     = {10.1063/1.4867668},
+  groups  = {msc},
+}
+
+@Article{tono2013,
+  author   = {K Tono and T Togashi and Y Inubushi and T Sato and T Katayama and K Ogawa and H Ohashi and H Kimura and S Takahashi and K Takeshita and H Tomizawa and S Goto and T Ishikawa and M Yabashi},
+  journal  = {New Journal of Physics},
+  title    = {Beamline, experimental stations and photon beam diagnostics for the hard x-ray free electron laser of {SACLA}},
+  year     = {2013},
+  number   = {8},
+  pages    = {083035},
+  volume   = {15},
+  abstract = {A beamline for the x-ray free electron laser (XFEL) of SPring-8 Angstrom Compact free electron LAser (SACLA) provides hard x-ray pulses in the range 4.5–19.5 keV. Its optical system in an optics hutch delivers a pink beam below 15 keV with either of two double-mirror systems or a monochromatic beam with a double-crystal monochromator. These XFEL beams are used for various types of measurement at experimental stations, e.g. x-ray diffraction, coherent diffraction imaging, x-ray spectroscopy and pump-and-probe measurement. The experimental stations consist of experimental hutches and control stations, and a femtosecond optical laser which is synchronized with XFEL pulses. Photon diagnostics have been performed for measuring radiation parameters in a shot-by-shot manner.},
+  doi      = {10.1088/1367-2630/15/8/083035},
+  groups   = {msc},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: grouping:
+0 AllEntriesGroup:;
+1 StaticGroup:msc\;0\;0\;0x8a8a8aff\;\;\;;
+}
