--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -179,4 +179,9 @@ Which factors influence SNR
 \label{chap:theory}
 
 \section{Kossel Lines}
-
+\begin{figure}
+	\centering
+	\includegraphics[width=0.8\linewidth]{images/kossel.pdf}
+	\caption{Geometry of Kossel Lines: Radiation from within a light source within a single crystal gets scattered at the lattice planes, causing a change in intensity along a cone of opening angle $90^o-\theta_{hkl}$ and vertex hkl. On an intersecting detector those intensity changes are visible as Kossel lines.}
+	\label{fig:doubleslit}
+\end{figure}
