more details sample prep

--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -23,9 +23,9 @@ As an iron containing control sample, 60mg FeCl3 and XXX Polystyrene were dissol
 
 \subsection{Nanoparticles in Poly(MMA/EHMA)  Matrix}
 As a second nanoparticle in polymer sample, a AIBN initiated Poly(MMA/EHMA) polymerisation with magnetite nanoparticles was performed. 
-The nanoparticle solution was concentrated to XXX in Tolune by precipitation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and toluene 800\,ul of EHMA was added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled with N$_2$  for 10\,min before moving heating it up to XXX using a water bath under weak sonication. The mixture was keept at XXX for XXX.
-The vials were uncapped and the polymer dried for 12h at XXX. The polymer was removed from the vials and cut into slices using a slow spinning diamond saw.
-As a control sample, the polymerisation was performed without any nanoparticles. 
+The nanoparticle solution was concentrated to XXX in toluene by precipitation, centrifugation and redispersion. To account for the different iron concentration, to different amounts of the nanoparticle solution and additional toluene, 800\,ul of EHMA was added each (see \fref{tab:sampleCP}). After strong sonication to ensure dispersion, 3.2\,ml of MMA were added and the solution was bubbled with N$_2$ for 5\,min. To start the polymerisation, 20\,mg of AIBN were added and the solution was bubbled again with N$_2$  for 10\,min before heating it up to XXX using a water bath under weak sonication using a sonic bath. The mixture was kept at XXX for XXX.
+The vials were uncapped and the polymer dried for 12h at XXX. The polymer was removed from the vials and cut into slices of approximatly XXX thickness using a slow spinning diamond saw.
+As a control sample, the polymerisation was performed without any nanoparticles added.
 
 \begin{table}
 	\centering
