--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -1,4 +1,5 @@
 \chapter{Simulations}
+\label{chap:simulation}
 \section{Single Particles}
 \subsection{Single Sphere}
 \subsection{Multiple Spheres}
