--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -166,7 +166,15 @@ The experimentally indistinguishable fluorescence energies $K_alpha,1$ and $K_al
 As the used X-ray detectors are polarization insensitive and X-ray fluorescence is unpolarized, there are 2 independent polarization modes giving $M_P = 2$  
 
 
-As good approximation, the total number of modes can be considered the product of those modes numbers (in reality, the mode numbers are not completely independent as)
+Path differences longer than the coherence length give additional modes, therefore the speckle visibility will be reduced large samples:
+
+If the speckle pattern is not spatially resolved by the detector because its resolution is to low compared to the change in intensity, undersampling will occur, the meassured signal will be spatially averaged giving independent sampling modes $M_S$
+
+
+
+
+
+As good approximation, the total number of modes can be considered the product of those modes numbers (in reality, the mode numbers are not completely independent, see \fref{chap:simulation})
 %- SNR
 %will use Peak/stdev bg definition
 Which factors influence SNR
@@ -179,9 +187,10 @@ Which factors influence SNR
 \label{chap:theory}
 
 \section{Kossel Lines}
+\cite{james1952}
 \begin{figure}
 	\centering
-	\includegraphics[width=0.8\linewidth]{images/kossel.pdf}
+	\includegraphics[width=0.5\linewidth]{images/kossel.pdf}
 	\caption{Geometry of Kossel Lines: Radiation from within a light source within a single crystal gets scattered at the lattice planes, causing a change in intensity along a cone of opening angle $90^o-\theta_{hkl}$ and vertex hkl. On an intersecting detector those intensity changes are visible as Kossel lines.}
 	\label{fig:doubleslit}
 \end{figure}
