--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -65,5 +65,11 @@ As a control sample, the polymerisation was performed without any nanoparticles 
 \subsubsection{Filtering}
 \subsection{Imaging Crystals}
 \subsubsection{Crystal orientation}
+For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{chap:kossel} can be used. 
+\begin{figure}
+	\centering
+\includegraphics[width=0.8\linewidth]{images/kosselfit.png}
+\caption{Program for fitting Kossel lines to experimental data}
+\end{figure}
 
 
