--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -95,7 +95,7 @@
 \usepackage{enumitem}
 
 %schönerer referenzierungen
-\usepackage[german,plain]{fancyref}
+\usepackage[english,plain]{fancyref}
 %app für appendix zu referenzen hinzufügen
 \newcommand*{\fancyrefappendixlabelprefix}{app}
 
@@ -264,11 +264,13 @@
 \vspace{4cm}
 
 %%%%%%%%%%%% AKÜRZUNGSVERZEICHNIS %%%%%%%%%%%%
-\chapter*{List of abbreviations}
+\chapter*{List of abbreviations and Symbols}
 \begin{acronym}[XXXXX]
 	\acro{CDI}{Coherent Diffractive Imaging}
 	\acro{IDI}{Incoherent Diffractive Imaging}
+	\acro{DoC}{Degree of Coherence}
 	\acro{HBT}{Hanburry Brown Twiss}
+	acro{NP}{Nanoparticle}
 	\acro{PS}{Polystyrene}
 	\acro{MMA}{Methylmethacrylate}
 	\acro{EHMA}{Etyhlhexymethacrylate}
